[package]
name = "enginesound2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"] }
rfd = "0.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.5.4"
image = "0.24.0"
native-dialog = "0.5.2"

[features]
default = ["gui"]
gui = []